Had to rename background files due strange characters

--- a/resources.qrc
+++ b/resources.qrc
@@ -248,10 +248,10 @@
         <file>SVG-cards/white/white_s_q.svg</file>
         <file>SVG-cards/white/back07.png</file>
         <file>backgrounds/eso1723a.jpg</file>
-        <file>backgrounds/8,848m_Everest_8,516m_Lhotse_Himalaya_Mountain_Flights_Nepal_-_panoramio_(2).jpg</file>
-        <file>backgrounds/Mount._Fuji_early_in_the_morning_早朝の富士山_-_panoramio.jpg</file>
+        <file>backgrounds/panoramio_(2).jpg</file>
+        <file>backgrounds/Mount-panoramio.jpg</file>
         <file>backgrounds/Wadi_rum_desert.jpg</file>
-        <file>backgrounds/_Palm_ _Beach._Port_Douglas._-_panoramio.jpg</file>
+        <file>backgrounds/panoramio.jpg</file>
         <file>SVG-cards/tigullio-modern/back.png</file>
         <file>SVG-cards/tigullio-modern/club_1.png</file>
         <file>SVG-cards/tigullio-modern/club_2.png</file>
